--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ body{
 }
 
 .link-container a.active {
-    background-color: lightskyblue;
+    background-color: salmon;
     color: white;
 }
 
@@ -60,7 +60,7 @@ body{
     width:100%;
     height:90vh;
     object-fit: cover;
-    vertical-align: bottom;
+    vertical-align: top;
     display: block;
     position:relative;
     z-index:-1;
@@ -141,7 +141,7 @@ body{
 
 .h-menu-text{
     margin-left:1vw;
-    background-color:lightskyblue;
+    background-color:salmon;
     padding:3vw;
     height:32vw;
     text-align:center;
@@ -164,7 +164,7 @@ body{
 
 .h-catering-text{
     margin-right:1vw;
-    background-color:lightskyblue;
+    background-color:blue;
     padding:3vw;
     height:32vw;
     text-align:center;
@@ -244,7 +244,7 @@ text{
 }
 
 .active-2 {
-    background-color: lightskyblue;
+    background-color: salmon;
     color: white;
 }
 
